# serializer version: 1
# name: test_select_empty[zoe_40][select.reg_zoe_40_charge_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'always',
        'always_charging',
        'schedule_mode',
        'scheduled',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.reg_zoe_40_charge_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Charge mode',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'charge_mode',
    'unique_id': 'vf1zoe40vin_charge_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_empty[zoe_40][select.reg_zoe_40_charge_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Charge mode',
      'options': list([
        'always',
        'always_charging',
        'schedule_mode',
        'scheduled',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.reg_zoe_40_charge_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_select_errors[zoe_40][select.reg_zoe_40_charge_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'always',
        'always_charging',
        'schedule_mode',
        'scheduled',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.reg_zoe_40_charge_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Charge mode',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'charge_mode',
    'unique_id': 'vf1zoe40vin_charge_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_errors[zoe_40][select.reg_zoe_40_charge_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Charge mode',
      'options': list([
        'always',
        'always_charging',
        'schedule_mode',
        'scheduled',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.reg_zoe_40_charge_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_selects[captur_phev][select.reg_captur_phev_charge_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'always',
        'always_charging',
        'schedule_mode',
        'scheduled',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.reg_captur_phev_charge_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Charge mode',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'charge_mode',
    'unique_id': 'vf1capturphevvin_charge_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[captur_phev][select.reg_captur_phev_charge_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-CAPTUR_PHEV Charge mode',
      'options': list([
        'always',
        'always_charging',
        'schedule_mode',
        'scheduled',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.reg_captur_phev_charge_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'always',
  })
# ---
# name: test_selects[twingo_3_electric][select.reg_twingo_iii_charge_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'always',
        'always_charging',
        'schedule_mode',
        'scheduled',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.reg_twingo_iii_charge_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Charge mode',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'charge_mode',
    'unique_id': 'vf1twingoiiivin_charge_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[twingo_3_electric][select.reg_twingo_iii_charge_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-TWINGO-III Charge mode',
      'options': list([
        'always',
        'always_charging',
        'schedule_mode',
        'scheduled',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.reg_twingo_iii_charge_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'always_charging',
  })
# ---
# name: test_selects[zoe_40][select.reg_zoe_40_charge_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'always',
        'always_charging',
        'schedule_mode',
        'scheduled',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.reg_zoe_40_charge_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Charge mode',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'charge_mode',
    'unique_id': 'vf1zoe40vin_charge_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[zoe_40][select.reg_zoe_40_charge_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-40 Charge mode',
      'options': list([
        'always',
        'always_charging',
        'schedule_mode',
        'scheduled',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.reg_zoe_40_charge_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'always',
  })
# ---
# name: test_selects[zoe_50][select.reg_zoe_50_charge_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'always',
        'always_charging',
        'schedule_mode',
        'scheduled',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.reg_zoe_50_charge_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Charge mode',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'charge_mode',
    'unique_id': 'vf1zoe50vin_charge_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[zoe_50][select.reg_zoe_50_charge_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-ZOE-50 Charge mode',
      'options': list([
        'always',
        'always_charging',
        'schedule_mode',
        'scheduled',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.reg_zoe_50_charge_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'schedule_mode',
  })
# ---
